<resources>
    <string name="app_name">TMA</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">Event Name</string>
    <string name="start_time">Start Time</string>
    <string name="event_type">Event Type</string>
    <string name="save">SAVE</string>
    <string name="input_error">Input Error</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="click_to_choose_a_time">Click to choose a time</string>
    <string-array name="event_type">
        <item>SIGHTSEEING</item>
        <item>GUIDANCE</item>
        <item>MEAL</item>
        <item>REST</item>
        <item>SHOPPING</item>
        <item>OTHERS</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="start_place">Start place</string>
    <string name="click_to_choose_a_place">Click to choose a place</string>
    <string name="end_time">End time</string>
    <string name="cancel">Cancel</string>
    <string name="map_key">AIzaSyCXseBewC5JnycCXt66nTt0Zj-YNE-Za-s</string>
    <string name="please_fill_out_all_blanks">        Please fill out all blanks        </string>
    <string name="title_activity_navi">NaviActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="past_journey">Past Journey</string>
    <string name="planning_journey">Planning journey</string>
    <string name="weather_reminder">Weather reminder</string>
    <string name="travel_manager">Travel Manager</string>
    <string name="clear_all">Clear all</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="test_to_place">Amsterdam</string>
    <string name="test_from_place">Rotterdam</string>
    <string name="test_time">10:10</string>
    <string name="time_separator"> ~ </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="rest">rest</string>
    <string name="sightseeing">sightseeing</string>
    <string name="shopping">shopping</string>
    <string name="meal">meal</string>
    <string name="guidance">guidance</string>
    <string name="others">others</string>
    <string name="pie_chart_view">Pie chart view</string>
    <string name="list_view">List view</string>
    <string name="bar_chart_view">Bar chart view</string>
    <string name="refresh">refresh</string>

    <!-- Strings for weather -->
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="click_to_choose_a_date">Click to choose a date</string>
    <string name="reserved">Reserved</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="weather_app_id">9537cc925c81433c3538f4c4f2642a44</string>
    <string name="dark_sky_id">29cfbdb909f7068c779fa15990e5299e</string>
    <string name="warning">Can not fetch weather too far from now</string>
    <string name="sample_city">Sydney</string>
    <string name="sample_temp">20 C</string>
    <string name="cant_get_data">Cannot fetch data!</string>
    <string name="summary">Summary</string>
    <string name="wind">Wind</string>
    <string name="unknown_city">Unknown city</string>
    <string name="wind_speed">wind speed</string>
    <string name="chart_title">Chart</string>
    <string name="list_title">List</string>
    <string name="pie_title">Pie Chart</string>
    <string name="weather_title">Weather Forecast</string>
</resources>
