<?xml version="1.0" encoding="utf-8"?>
<com.mcxtzhang.swipemenulib.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout2">

            <ImageView
                android:id="@+id/item_image"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_guidance" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from" />

                    <TextView
                        android:id="@+id/fromPlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/test_from_place" />
                </TableRow>

                <TableRow

                    android:layout_marginTop="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to" />

                    <TextView
                        android:id="@+id/toPlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/test_to_place" />
                </TableRow>
            </TableLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:paddingTop="7dp"
            android:id="@+id/timeLayout"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/item_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_separator" />

            <TextView
                android:id="@+id/item_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/test_time" />

        </LinearLayout>

        <TextView
            android:id="@+id/eventNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="29dp"
            android:layout_toStartOf="@+id/timeLayout"
            android:text=""
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

    <Button
        android:id="@+id/itemEdit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/edit"
        android:background="@color/accent" />

    <Button
        android:id="@+id/itemDelete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/delete"
        android:background="@color/colorPrimary" />

</com.mcxtzhang.swipemenulib.SwipeMenuLayout>