<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_bar_chart"
            android:title="@string/bar_chart_view" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list_view"
            android:title="@string/list_view" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_pie_chart"
            android:title="@string/pie_chart_view" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
